# dwello_web

./: .env  Cargo.toml  Procfile  README.md  Rocket.toml  app.json  diesel.toml  netlify.toml  rust-toolchain
frontend/: README.md  elm.json  package.json
frontend/public/: index.html
frontend/src/: Api.elm  Config.elm  Global.elm  Ports.elm  Route.elm  Util.elm  View.elm  all.css  index.js
frontend/src/Data/: AuthPayload.elm  Deal.elm  Session.elm  User.elm
frontend/src/Main/: Model.elm  (+4 more)
migrations/2019-01-03-014515_create_users/: up.sql
migrations/2019-01-06-204632_add_user_fields/: down.sql  up.sql
migrations/2019-01-07-134127_create_sessions/: up.sql
migrations/2019-01-20-205302_create_house/: down.sql  up.sql
migrations/2019-01-20-210355_create_deals/: down.sql  up.sql
migrations/2019-01-22-033956_add_role_to_user/: down.sql  up.sql
migrations/2019-01-31-221108_add_title_to_deal/: up.sql
migrations/2019-02-01-191316_add_address_data_to_houses/: up.sql
migrations/2019-02-25-021758_create_profile/: up.sql
src/: auth.rs  db.rs  error.rs  main.rs  models.rs  result.rs  schema.rs  user.rs  validation.rs
src/accounts/: mod.rs  resolvers.rs  types.rs
src/auth/: mod.rs
src/controllers/: accounts.rs  deal.rs  mod.rs  viewer.rs  views.rs
src/deals/: mod.rs  resolvers.rs  types.rs
src/graphql/: mod.rs
src/housekeeping/: mod.rs
src/models/: auth.rs  deal.rs  house.rs  mod.rs  session.rs  user.rs
src/resolvers/: auth.rs  deal.rs  mod.rs  user.rs
src/viewer/: mod.rs  types.rs
src/web/: cors.rs  error.rs  guards.rs  mod.rs  types.rs
(+12 files in other folders)
