[package]
name = "main"
version = "0.1.0"
authors = ["dan@debassociates.com"]

[dependencies]
rocket = "0.4.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenv = "0.9.0"
bcrypt = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4.6", features = ["serde"] }
validator = "0.8.0"
validator_derive = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
